--- a/app/src/main/res/layout/fragment_secound.xml
+++ b/app/src/main/res/layout/fragment_secound.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="First Fragment"
+        android:text="First Secound"
         android:textSize="40dp"
         android:textStyle="bold" />
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
