--- a/app/src/main/res/layout/popup_window_calender.xml
+++ b/app/src/main/res/layout/popup_window_calender.xml
@@ -9,20 +9,45 @@
     >
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/currDate"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:padding="25sp"
+            android:text="" />
 
-    <TextView
-        android:id="@+id/test"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        android:padding="25sp"
-        android:text="@string/id_test" />
-    <Button
-    android:id="@+id/button_test"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:onClick="onClick"
-    android:text="Ok"
-    android:layout_gravity = "right"/>
+        <TextView
+            android:id="@+id/startTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/starttime" />
+
+        <TextView
+            android:id="@+id/endTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/endtime" />
+
+        <TextView
+            android:id="@+id/sumTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/time_sum" />
+
+        <Button
+            android:id="@+id/button_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="onClick"
+            android:text="Ok" />
+
+    </LinearLayout>
+
 </RelativeLayout>
