changed backgroundcolor in tabs; adapted worktime calculation

--- a/app/src/main/res/layout/activity_workplace__details.xml
+++ b/app/src/main/res/layout/activity_workplace__details.xml
@@ -43,7 +43,7 @@
             android:id="@+id/simpleTabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabBackground="@color/colorPrimaryDark"
+            app:tabBackground= "@color/colorPrimary"
             app:tabIndicatorColor="@color/colorAccent"
             app:tabTextColor = "@color/tabInactive"
             android:layout_marginTop="50dp"
