--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    tools:context="ss18.mc.positime.DashboardActivity">
 
     <include
         layout="@layout/app_bar_navigation_activity"
@@ -83,6 +84,7 @@
         android:scaleType="fitXY"
         android:adjustViewBounds="true"/>
         <ImageView
+            android:id = "@+id/click_pause"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:paddingLeft="30dp"
@@ -93,7 +95,7 @@
             android:adjustViewBounds="true"/>
 
         <ImageView
-            android:layout_width="75dp"
+            android:layout_width="105dp"
             android:layout_height="45dp"
             android:layout_marginTop="133dp"
             android:adjustViewBounds="true"
