--- a/app/src/main/res/drawable/layout_border_black_bottom.xml
+++ b/app/src/main/res/drawable/layout_border_black_bottom.xml
@@ -3,7 +3,7 @@
     <item>
         <shape
             android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#FF000000" />
+            <stroke android:width="1dp" android:color="#757575" />
             <solid android:color="#efefef" />
 
         </shape>
