--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/current_position_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="-"
                 app:layout_column="1"
                 app:layout_row="3" />
 
@@ -62,7 +62,7 @@
                 android:id="@+id/current_work_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="-"
                 app:layout_column="1"
                 app:layout_row="5" />
 
@@ -79,7 +79,7 @@
                 android:id="@+id/current_pause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="-"
                 app:layout_column="1"
                 app:layout_row="7" />
 
@@ -96,7 +96,7 @@
                 android:id="@+id/current_money_earned"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="-"
                 app:layout_column="1"
                 app:layout_row="9" />
 
@@ -158,7 +158,7 @@
                 android:id="@+id/current_breaks_counted"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="-"
                 app:layout_column="1"
                 app:layout_row="11" />
 
