--- a/app/src/main/res/layout/overview_workplaces_adapater_layout.xml
+++ b/app/src/main/res/layout/overview_workplaces_adapater_layout.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/show_details_workplace"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/list_item_string"
