--- a/app/src/main/res/layout/activity_overview__month.xml
+++ b/app/src/main/res/layout/activity_overview__month.xml
@@ -8,17 +8,19 @@
 
     <TextView
         android:id="@+id/actual_year"
-        android:layout_width="373dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="6dp"
         android:paddingTop="5dp"
         android:text="actual Year"
         android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="6dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/workplace_list_view"
