--- a/app/src/main/res/layout/activity_overview__week.xml
+++ b/app/src/main/res/layout/activity_overview__week.xml
@@ -8,16 +8,18 @@
 
     <TextView
         android:id="@+id/actual_month"
-        android:layout_width="365dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="6dp"
         android:paddingTop="5dp"
         android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="6dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ListView
