added icon, fixed workplace add

--- a/app/src/main/res/layout/content_workplace_add_edit.xml
+++ b/app/src/main/res/layout/content_workplace_add_edit.xml
@@ -84,7 +84,8 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/workplace_name" />
+                    android:hint="@string/workplace_name"
+                    android:inputType="text"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -97,7 +98,8 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/workplace_chef_ffname" />
+                    android:hint="@string/workplace_chef_ffname"
+                    android:inputType="text"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -110,7 +112,8 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/workplace_chef_llname" />
+                    android:hint="@string/workplace_chef_llname"
+                    android:inputType="text"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
